--- a/main/templates/main/dashboard_base.html
+++ b/main/templates/main/dashboard_base.html
@@ -46,7 +46,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/css/selectize.min.css"
         integrity="sha256-EhmqrzYSImS7269rfDxk4H+AHDyu/KwV1d8FDgIXScI=" crossorigin="anonymous" />
     
-   
+   {%block header%}{%endblock%}
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -248,6 +248,7 @@
             })
         });
     </script>
+    {%block script%}{%endblock%}
 </body>
 
 </html>
